# judge-agent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  GETTING_STARTED.md  IMPLEMENTATION_NOTES.md  README.md  docker-compose.yml
.beads/: issues.jsonl  metadata.json
.beads/dolt.20260307T061042Z.corrupt.backup/: config.yaml
.beads/export-state/: 99b2bf72d971487f.json
.husky/: pre-commit
backend/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  judge_agent.py  judicial_reasoner.py  output.py  video_pipeline.py
backend/app/agents/prompts/: judge_text.txt  judge_transcript.txt  judge_video.txt
backend/app/api/: __init__.py  auth.py  feedback.py  frames.py  judge.py  upload.py
backend/app/core/: config.py
backend/app/db/: dbos.py  models.py
backend/app/models/: __init__.py
backend/cli/: __main__.py  dump_fixtures.py
backend/scripts/: dev.sh  presubmit.sh
backend/tests/: conftest.py  eval_detection.py  test_api_auth.py  test_api_feedback.py  test_api_frames.py  test_api_judge.py  test_api_upload.py  test_main.py
backend/tests/fixtures/: ai_samples.json  human_samples.json
docs/: ASSIGNMENT.md  CHANGELOG.md  README.md
docs/v0.0.0/: README.md
docs/v0.0.0/lightsabers/: ai-code-review-python.md  ai-code-review-react-lightsaber.md
docs/v0.0.1/: README.md
docs/v0.0.1-pre/: README.md
docs/v0.0.2/: README.md
docs/v0.0.2-pre/: README.md
docs/v0.0.3-pre/: README.md
docs/v0.0.4-pre/: README.md
docs/v0.0.5-pre/: README.md
docs/v0.0.6-pre/: README.md
docs/v0.0.7-pre/: README.md
docs/v0.0.8-pre/: README.md
frontend/: .env.local.example  .eslintrc.json  .gitignore  Dockerfile  README.md  eslint.config.js  globals.css  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
frontend/app/components/: Button.tsx  Card.tsx  DistributionRow.tsx  FeedbackRow.tsx  Footer.tsx  FrameReport.tsx  Header.tsx  HistoryPanel.tsx  HistoryRow.tsx  LoginScreen.tsx  ModeSelector.tsx  OriginSection.tsx  ResultCard.tsx  SectionLabel.tsx  TextAnalysis.tsx  VideoUpload.tsx  ViralitySection.tsx
frontend/app/lib/: api.ts  constants.ts  helpers.ts  hooks.ts  types.ts
