[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "judge-agent-backend"
version = "0.0.4"
description = "Judge Agent backend — coding assignment project by Glo Maldonado (sanscourier.ai)"
requires-python = ">=3.11"
authors = [
    {name = "Glo Maldonado", email = "glo@sanscourier.ai"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.1.0",
    # SQLite is built into Python — no extra driver needed for local dev.
    # psycopg2-binary is only required when DATABASE_URL targets PostgreSQL.
    "aiofiles>=23.0.0",
    "agno>=1.0.0",
    "anthropic>=0.40.0",
    "dbos>=2.0.0",
    "elevenlabs>=1.0.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "mypy>=1.7.0",
    "ruff>=0.1.8",
    "bandit>=1.7.5",
    "vulture>=2.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.urls]
Repository = "https://github.com/feltsense/judge-agent"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ISC"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic
exclude = ["alembic"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
